--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
 </head>
 <body>
-    <script src="main.js"></script>
-    <script src="boid.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <!-- <script src="boid.js"></script> -->
+    <script src="test.js"></script>
 </body>
 </html>
