- Functions draw() and setup() migrated to main.js - Class Boid() as well as the other functions migrated to the boid.js - previous bugFix turned out to fail, so temporarily brought it back - changes made to index.html to acknowledge new location of the boid files - moved old boid alg to the old_* files and added them to .gitignore

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
 </head>
 <body>
-    <!-- <script src="main.js"></script> -->
-    <!-- <script src="boid.js"></script> -->
-    <script src="test.js"></script>
+    <script src="main.js"></script>
+    <script src="boid.js"></script>
+    <!-- <script src="test.js"></script> -->
 </body>
 </html>
